Line reading a bust but we have the write point in which to start.